--- a/src/pages/DetailedAnalysis/DetailedAnalysis.module.scss
+++ b/src/pages/DetailedAnalysis/DetailedAnalysis.module.scss
@@ -126,13 +126,38 @@
     }
     .question {
       @extend .flexRow;
-
+      align-items: flex-start;
+      margin-top: 2rem;
+      .left {
+        @extend .flexCol;
+        align-items: flex-start;
+        justify-content: flex-start;
+        margin-right: 1rem;
+        h5 {
+          margin-bottom: 2rem;
+        }
+        .options {
+          p {
+            margin: 1rem 0;
+            span {
+              margin-right: 0.6rem;
+            }
+          }
+        }
+      }
       .right {
         width: 100%;
+        max-width: 500px;
         align-self: flex-start;
         position: relative;
         @extend .flexCol;
         padding-left: 1rem;
+        > div {
+          width: 100%;
+        }
+        .header {
+          @extend .flexRow;
+        }
 
         // button {
         //   margin-left: auto !important;
@@ -148,8 +173,8 @@
             margin: 5px 0;
             font-size: 0.9rem;
           }
-          .left,
-          .right {
+          .leftMI,
+          .rightMI {
             @extend .flexCol;
             align-items: flex-start;
             width: -moz-fit-content;
@@ -162,25 +187,33 @@
           margin-top: 2rem;
         }
         .optionPercentageContainer {
-          min-width: 300px;
+          width: 100%;
 
           @extend .flexRow;
+          justify-content: flex-start;
+          .fullWidth {
+            width: 100%;
+            margin: 5px 0;
+
+            border: 1px solid rgba(black, 0.1);
+          }
           h5,
           p {
             margin: 0;
             padding: 0 5px;
-            width: 55px;
+            min-width: 55px;
+            max-width: 55px;
           }
           h5 {
-            width: 30px;
+            min-width: 20px;
+            max-width: 20px;
+            padding: 0;
           }
-          .optionPercentage {
-            margin: 5px 0;
-
-            background-color: var(--clr-success);
-            width: 100%;
-            height: 20px;
-          }
+          // .widthBar {
+          //   background-color: var(--clr-success);
+          //   width: 100%;
+          //   height: 20px;
+          // }
         }
       }
     }
@@ -197,5 +230,44 @@
     height: 20px;
     border-radius: 50%;
     margin-right: 0;
+  }
+}
+.horizontalLine {
+  background-color: rgba(grey, 0.2);
+  height: 1px;
+  width: 100%;
+  margin: 2rem 0;
+}
+
+.option {
+  padding: 0.4rem 1.8rem;
+
+  &.selected {
+    // background-color: var(--clr-primary);
+    border: 2px solid var(--clr-error);
+  }
+  &.correct {
+    border: 2px solid var(--clr-success);
+  }
+  &.selected.correct {
+    border: 2px solid var(--clr-success);
+
+    background-color: var(--clr-success);
+
+    color: white;
+  }
+}
+.widthBar {
+  background-color: rgba(#f8ba1c, 0.3);
+  width: 100%;
+  height: 20px;
+  &.selected {
+    background-color: var(--clr-error);
+  }
+  &.correct {
+    background-color: var(--clr-success);
+  }
+  &.selected.correct {
+    background-color: var(--clr-success);
   }
 }
