--- a/src/pages/Questions/Questions.module.scss
+++ b/src/pages/Questions/Questions.module.scss
@@ -4,6 +4,12 @@
   width: 100%;
   padding-bottom: 2rem;
   position: relative;
+  > form {
+    background: white;
+    padding: 1rem 1.5rem;
+    border-radius: 10px;
+    margin-top: 1rem;
+  }
   .inputFields {
     margin: 0.5rem 0;
     @extend .flexRow;
