--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -79,24 +79,43 @@
     }
   }
 }
+.upcomingTestCard{
+  position: relative;
+}
 
 .listItemContainer {
   display: flex;
   align-items: center;
   justify-content: space-between;
   font-size: 1rem;
-  width: 500px;
+  width: 100%;
   height: 30px;
   margin: 2px;
-
+  
+  &::before{
+    content: "";
+   transition: all 0.2s ease-in-out;
+    position: absolute;
+    left: 0;
+    z-index: 0;
+    width: 100%;
+    height: 30px;
+  }
+  &:hover::before{
+    background: rgba(97, 180, 241, 0.1);
+    
+  }
+  cursor: pointer;
   .title {
     color: black;
+    z-index: 1;
   }
-
+ 
   .details {
     color: black;
     display: flex;
     align-items: center;
+    z-index: 1;
     .indicator {
       width: 14px;
       margin-left: 8px;
