--- a/src/pages/Questions/Objective/Objective.module.scss
+++ b/src/pages/Questions/Objective/Objective.module.scss
@@ -4,7 +4,7 @@
   max-width: 100%;
   .correctAnswer {
     color: green;
-    font-weight: bolder;
+    font-weight: 700;
   }
   .header {
     @extend .flexRow;
